# app-pulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  build.bat  build.rs
.github/workflows/: release.yml
src/: config.rs  diagnostics.rs  gpu_names.rs  json.rs  logger.rs  main.rs  metrics_format.rs  network_statuses.rs
src/app/: keys.rs  mod.rs  mouse.rs
src/backend/: mod.rs  stub.rs  sys_info.rs  win32.rs
src/ui/: mod.rs  overlays.rs  spring.rs  widgets.rs
